<resources>
    <string name="app_name">LifeLoot</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="signup_fragment_label">First Fragment</string>
    <string name="login_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">0</string>
    <string name="random_heading">Here is a random number between 0 and %d.</string>
    <string name="toast_button_text">Toast</string>
    <string name="random_button_text">Random</string>
    <string name="count_button_text">Count</string>
    <string name="random_text">barnacles</string>
    <string name="textview_random_string">R</string>

    <string name="textview_sign_up_title_string">Sign Up</string>
    <string name="button_signup_log_in_text">Log In</string>
    <string name="textview_signup_email_hint">email address</string>
    <string name="textview_signup_password_hint">password</string>
    <string name="button_signup_sign_up_text">Sign Up</string>
    <string name="textview_signup_username_hint">username</string>
    <string name="textview_login_title_text">Log In</string>
    <string name="button_login_log_in_text">Log In</string>
    <string name="button_login_sign_up_text">Sign Up</string>
    <string name="textview_login_password_hint">password</string>
    <string name="textview_login_username_hint">username</string>
    <string name="challenge">Challenge</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_game">Game</string>

    <string-array name="player_names">
        <item>Player 1</item>
        <item>Player 2</item>
    </string-array>
    <string-array name="player_ids">
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>